cmake_minimum_required(VERSION 3.12.2)
project(standard_library)

set(CMAKE_CXX_STANDARD 14)

add_executable(standard_library main.cpp catch.hpp Ejercicio1.cpp Ejercicio2.cpp Ejercicio3.cpp Ejercicio4.cpp Ejercicio5.cpp Ejercicio6.cpp Ejercicio7.cpp Ejercicio8.cpp Ejercicio9.cpp Ejercicio10.cpp Ejercicio11.cpp)